# logtail2

./: .gitattributes  AUTHORS  ChangeLog  NEWS  README  README.md  config.h.in  configure  configure.ac  logtail2
src/: Makefile.am  Makefile.in  logtail2.8  logtail2.c  logtail2.h  main.c  offset.c  options.c
